samples/_failures_safe/1761427313_1824e6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5eae0f64.c: In function ‘main’:
./samples/SAFE/__tmp_5eae0f64.c:141:17: error: expected expression at end of input
  141 |                 if (!add_entry(heap_buffer, timestamp, level,
      |                 ^~
./samples/SAFE/__tmp_5eae0f64.c:141:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5eae0f64.c:141:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5eae0f64.c:141:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5eae0f64.c:141:17: error: expected declaration or statement at end of input
